changement js caroussel, rectification taille icone dans comment sy rendre, modification du caroussel de animations, responsive rectifié dans le a venir

--- a/index.html
+++ b/index.html
@@ -190,16 +190,17 @@
                     </section>
                 </div>
             </div>
+            <h2>
+                Animations
+            </h2>
             <section class="container_animations">
-                <h2>
-                    Animations
-                </h2>
-                      <img src="images/la_fete_du_musee.jpg" alt="Description de l'image">
-                    <div class="text">
-                      <h2>Titre</h2>
-                      <p>Paragraphe à droite de l'image.</p>
-                    </div>
-                  </div>
+                <div id="left-arrow" class="arrow" >&#10094;</div>
+                <img src="images/la_fete_du_musee.jpg" alt="Description de l'image">
+                <div class="Animations_texte">
+                    <h2>La fête du musée</h2>
+                    <p>4 mai 2024 - 9 h 00 - 18 h 00</p>
+                </div>
+                <div id="right-arrow" class="arrow">&#10095; </div>
             </section>
             <h2>
                 À venir
