fix bouton car et responsive retrouvez nous

--- a/index.html
+++ b/index.html
@@ -62,14 +62,14 @@
                 </div>
             </div>
 
-                <button class="button_billeterie_slider" href="lien billeterie">                          <!--Faux lien-->
-                    <div class="square_info">
-                        <img class="image_info" src="images/icone_info.png" alt="Billeterie" /> <!--C'EST L'IMAGE BILLET QU'IL FAUT-->
-                    </div>
-                    <div>
-                        <p class="texS Space_savoir_plus">Billeterie</p>
-                    </div>
-                </button>
+            <button class="button_billeterie_slider" href="lien billeterie">
+                <div class="square_info">
+                    <img class="image_info" src="images/icone_info.png" alt="Billeterie" />
+                </div>
+                <div>
+                    <p class="texS Space_savoir_plus">Billeterie</p>
+                </div>
+            </button>
 
                                     <!--Infos sur le Musée-->
         <section class="container_info">
